2025-12-08T02:01:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20014280466 # 1657
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-08
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3839 / 0 3841 / +0 +2

2025-12-07T12:46:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20004432675 # 1656
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-07
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3838 / 0 3839 / +0 +1

2025-12-06T12:48:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19988705936 # 1654
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-06
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3837 / 0 3838 / +0 +1

2025-12-04T12:55:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19929718310 # 1650
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-04
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3836 / 0 3837 / +0 +1

2025-12-03T12:55:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19894568874 # 1648
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-03
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3835 / 0 3836 / +0 +1

2025-12-03T01:59:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19879752874 # 1647