@@ -1,3 +1,9 @@
+2025-12-08T12:54:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20028791115 # 1658
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-08
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3841 / 0 3842 / +0 +1
+
 2025-12-08T02:01:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20014280466 # 1657
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-08
